# enpm663_leader_follower

./: README.md
navigation/navigation/: follower_navigator_interface.py
src/enpm663_leader_follower/final_project/final_project/: utilities.py
src/enpm663_leader_follower/final_project/models/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/enpm663_leader_follower/mage_msgs/: CMakeLists.txt
src/enpm663_leader_follower/mage_msgs/std_srvs/: Trigger.srv
src/enpm663_leader_follower/navigation/: setup.py
src/enpm663_leader_follower/navigation/navigation/: follower_navigator_interface.py  leader_navigator_interface.py
